# registerbot

./: .gitignore
backend/: app.py  main.py  pyproject.toml
backend/api/: __init__.py  auth.py  config_api.py  dashboard.py  devtools.py  logs_api.py  openai_proxy.py  pipeline_api.py  stats_api.py  tokens.py  ws_logs.py  ws_pipeline.py
backend/config/: settings.yaml.example
backend/src/: __init__.py
backend/src/config/: settings.py
backend/src/integrations/: browser.py  openai_api.py  talentmail.py
backend/src/middleware/: auth.py
backend/src/pipeline/: __init__.py  base.py  context.py  runner.py
backend/src/services/: account_pool.py  health_checker.py  registration_service.py  token_refresher.py
backend/src/steps/: __init__.py  browser_signup.py  browser_verify.py  email.py  password.py  profile.py  register.py  upgrade.py  verify.py
backend/src/storage/: account_store.py  stats_store.py  token_store.py  user_store.py
backend/src/utils/: crypto.py  log_collector.py  logger.py  passwords.py
backend/tests/: test_account_health.py  test_api_dashboard.py  test_auth.py  test_config_api.py  test_devtools.py  test_health_checker.py  test_logs_api.py  test_openai_proxy.py  test_pipeline.py  test_registration.py  test_talentmail.py  test_token_refresher.py  test_tokens_api.py
docs/: CADDY_DEPLOYMENT.md  CHAT2API_ARCHITECTURE.md  COMPETITOR_ANALYSIS.md  Caddyfile.codex.example  DEPLOYMENT_GUIDE.md  HTTP_REGISTRATION_RESEARCH.md  INTEGRATION_GUIDE.md  PIPELINE_TESTING.md  PLAYWRIGHT_REGISTRATION.md  PROJECT_PROGRESS.md  REGISTRATION_FLOW.md  TODO.md  (+1 more)
(+43 files in other folders)
